--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,6 +4,7 @@ lombok = "1.18.36"
 runPaper = "2.3.1"
 paperweightUserdev = "2.0.0-beta.14"
 paper = "1.21.1-R0.1-SNAPSHOT"
+minecraft = "1.21.1"
 luckperms = "5.4"
 
 [libraries]
